# onyx

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  Onyx.sln  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CONTRIBUTING.md
lib/glfw/: CMakeLists.txt
lib/glfw/src/: CMakeLists.txt
samples/Sandbox/: CMakeLists.txt  Main.cpp  Sandbox.vcxproj
src/Onyx/: Application.cpp  Application.h  CMakeLists.txt  Onyx.h  Onyx.vcxproj  Onyx.vcxproj.filters  pch.h
src/Onyx.Engine/: CMakeLists.txt  Onyx.h  pch.h
src/Onyx.Engine/Components/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
src/Onyx.Engine/Diagnostics/: Logger.cpp  Logger.h
src/Onyx.Engine/System/: Application.cpp  Application.h  Event.h  Window.cpp  Window.h  WindowCloseEvent.h  WindowProperties.h  WindowsWindow.cpp  WindowsWindow.h
src/Onyx.Engine/System/Events/: Event.h  EventType.h  MouseButtonAction.h  MouseButtonType.h  MouseClickEvent.cpp  MouseClickEvent.h  MouseMoveEvent.cpp  MouseMoveEvent.h  WindowCloseEvent.cpp  WindowCloseEvent.h  WindowResizeEvent.cpp  WindowResizeEvent.h
src/Onyx.Sandbox/: App.cpp  App.h  CMakeLists.txt  Main.cpp  MouseLayer.cpp  MouseLayer.h  Onyx.Sandbox.vcxproj
src/Onyx/Diagnostics/: Logger.cpp  Logger.h
src/Onyx/System/: Application.cpp  Application.h  Event.h  Window.h  WindowCloseEvent.h  WindowProperties.h  WindowsWindow.cpp  WindowsWindow.h
src/OnyxEngine/: Application.h  CMakeLists.txt
src/Sandbox/: CMakeLists.txt  Main.cpp
